# llama_api

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_model.sh
app/: main.py  model.py
